# co-scientist

./: .env.example  .gitignore  Co-Scientist Backlog- Experimentation System Integration and Execution Tracking.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_goals.py  0002_create_evidence.py  0003_create_ontology.py  0004_create_approach_cards.py  0005_create_rubric_scores.py  0006_create_hypothesis_cards.py  0007_create_experiment_cards.py  0008_create_approval_decisions.py  0009_create_validation_results.py  (+22 more)
docs/: repro-handoff-p4-integration.md
tests/: conftest.py  test_approach_api.py  test_approach_evidence.py  test_approach_revise.py  test_approach_service.py  test_approval_api.py  test_approval_cli.py  test_approval_service.py  test_critic_service.py  test_device_api.py  test_device_evidence.py  test_device_service.py  test_domain_canonicalize.py  test_evaluation_api.py  test_evaluation_handoff.py  test_evaluation_quality.py  test_evaluation_service.py  test_execution_service.py  test_experiment_api.py  test_experiment_handoff.py  test_experiment_service.py  test_feedback_api.py  test_feedback_service.py  test_goal_api.py  test_goal_cli.py  test_goal_service.py  test_governance_api.py  test_governance_execution.py  test_governance_service.py  test_hypothesis_api.py  test_hypothesis_service.py  test_ontology_api.py  test_ontology_service.py  test_phase2_gap_closure.py  test_phase3_handoff_control.py  test_result_bundle.py  test_roadmap_api.py  test_roadmap_execution.py  test_roadmap_service.py  test_runner_service.py  (+13 more)
(+106 files in other folders)
