[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coscientist"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "anyio>=4",
]

[project.scripts]
cs = "coscientist.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/coscientist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
